--- a/views/admin.html
+++ b/views/admin.html
@@ -8,13 +8,18 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.3/themes/base/jquery-ui.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/css/bootstrap-datepicker.min.css"/> -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.bootstrap5.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style/sidebar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/multiple-select@1.7.0/dist/multiple-select.min.css">
+    <style>
+        span {
+            background: none !important;
+        }
+    </style>
 </head>
 
 
@@ -112,7 +117,7 @@
                                         <div class="input-group flex-nowrap">
                                             <span class="input-group-text">이름</span>
                                             <input type="text" id="name" name="name" class="form-control" maxlength="45">
-                                            <select id="level" name="level" class="form-select form-select-sm" style="flex: 0.2 1 auto;">
+                                            <select id="ulevel" name="level" class="form-select form-select-sm" style="flex: 0.2 1 auto;">
                                                 <option value="">전체</option>
                                                 <option value="0">학생</option>
                                                 <option value="1">교사</option>
@@ -151,7 +156,7 @@
                                                         <th>반</th>
                                                         <th>번호</th>
                                                         <th>가입날짜</th>
-                                                        <th>#</th>
+                                                        <th>기기권한</th>
                                                         <th>관리</th>
                                                     </tr>
                                                 </thead>
@@ -173,7 +178,7 @@
                             <!-- card-header end -->
                             <div class="card-body">
                                 <div class="table-responsive" >
-                                    <table class="table table-hover" id="ap_tables" style="white-space: nowrap; width: 100%;">
+                                    <table class="table table-hover" id="ap_tables" style="white-space: nowrap; width: 100%; min-height: 100px;">
                                         <thead>
                                             <tr>
                                                 <th>아이디</th>
@@ -226,7 +231,9 @@
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="js/memberAuth.js"></script>
+    <script src="https://unpkg.com/multiple-select@1.7.0/dist/multiple-select.min.js"></script>
     <script>
+        var table = null;
         $( function() { 
             $("#stdate").daterangepicker({ 
                 autoUpdateInput: false,
@@ -299,13 +306,29 @@
                     school: $("#school").val(),
                     grade: '',
                     class: '',
-                    level: $("#level").val(),
+                    level: $("#ulevel").val(),
                     userLevel: member[0].level,
                     name: $("#name").val(),
-                    start: $("#stdate").val().split(" - ")[0],
-                    end: $("#stdate").val().split(" - ")[1],
+                    start: $("#stdate").val().split(" ~ ")[0],
+                    end: $("#stdate").val().split(" ~ ")[1],
                 },
                 success:function(data) {
+                    if (data == '') {
+                        new DataTable('#tables', 
+                            { 
+                                columnDefs: [
+                                    {
+                                        className: 'dt-head-center',
+                                        targets: "_all",
+                                    },
+                                    {
+                                        className: 'dt-body-center',
+                                        targets: "_all",
+                                    },
+                                ],
+                                scrollX: true, paging: true, destroy: true, data: datas 
+                            });
+                    }
                     $.each(data, (i, v) => {
                         let level = '';
                         if (v.level == 0) level = '학생'
@@ -320,25 +343,52 @@
                             v.class,
                             v.number,
                             dayjs(v.date).format("YYYY-MM-DD"),
-                            i,
+                            `<select multiple="multiple" class="multiple-select" id="multiple_${v.id}">
+                                <option value="1">January</option>
+                                <option value="2">February</option>
+                                <option value="3">March</option>
+                                <option value="4">April</option>
+                                <option value="5">May</option>
+                                <option value="6">June</option>
+                                <option value="7">July</option>
+                                <option value="8">August</option>
+                                <option value="9">September</option>
+                                <option value="10">October</option>
+                                <option value="11">November</option>
+                                <option value="12">December</option>
+                            </select>`,
                             `<button type="button" class="btn btn-danger" onclick="sign('${v.id}', 1, 0, 0)">삭제</button>`
                         ])
                         if (data.length - 1 == i) {
-                            console.log(datas)
-                            new DataTable('#tables', 
+                            table = new DataTable('#tables', 
                             { 
                                 columnDefs: [
                                     {
-                                        className: 'dt-head-center',
+                                        className: 'dt-head-left',
                                         targets: "_all",
                                     },
                                     {
-                                        className: 'dt-body-center',
+                                        className: 'dt-body-left',
                                         targets: "_all",
                                     },
                                 ],
-                                scrollX: true, paging: true, destroy: true, data: datas 
+                                scrollX: true, 
+                                paging: true, 
+                                destroy: true, 
+                                data: datas 
                             });
+                            table.on('draw', function () {
+                                console.log(table.page.info());
+                                $(".multiple-select").multipleSelect('destroy');
+                                $(".multiple-select").multipleSelect({ filter: true, placeholder: '권한부여', maxHeight: 5, maxHeightUnit: 'row' });
+                            });
+                            $(".multiple-select").multipleSelect('destroy');
+                            $(".multiple-select").multipleSelect({ filter: true, placeholder: '권한부여', maxHeight: 5, maxHeightUnit: 'row',
+                                onClick: function (view) {
+                                    console.log('onClick event fire! view: ' + JSON.stringify('getOptions') + '\n')
+                                }
+                             });
+                            
                         }
                     })
                     
